tests/infinite_type/overflow_evaluation.stderr
error[E0275]: overflow evaluating the requirement `Send<i32, Send<i32, Recv<Test4, End>>>: std::marker::Send`
  --> tests/infinite_type/overflow_evaluation.rs:64:12
   |
64 |     Branch(Send<i32, Send<i32, Recv<Test4, End>>>),
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required because it appears within the type `Test4`
  --> tests/infinite_type/overflow_evaluation.rs:62:6
   |
62 | enum Test4 {
   |      ^^^^^
note: required for `Recv<Test4, End>` to implement `Session`
  --> tests/infinite_type/overflow_evaluation.rs:37:35
   |
37 | impl<T: marker::Send, S: Session> Session for Recv<T, S> {
   |         ------------              ^^^^^^^     ^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here

error[E0275]: overflow evaluating the requirement `Send<i32, Recv<i32, Recv<Test6, End>>>: std::marker::Send`
  --> tests/infinite_type/overflow_evaluation.rs:72:12
   |
72 |     Branch(Send<i32, Recv<i32, Recv<Test6, End>>>),
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required because it appears within the type `Test6`
  --> tests/infinite_type/overflow_evaluation.rs:70:6
   |
70 | enum Test6 {
   |      ^^^^^
note: required for `Recv<Test6, End>` to implement `Session`
  --> tests/infinite_type/overflow_evaluation.rs:37:35
   |
37 | impl<T: marker::Send, S: Session> Session for Recv<T, S> {
   |         ------------              ^^^^^^^     ^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here
